Test/typing/should_fail/methods_abstract_strictfp.java
package tutu.titi.toto;

abstract class A {

    abstract strictfp void myMethod(){}

}